add api to print bill